# emiliacb

./: .gitignore  LICENCE.md  README.md  frontmatter.json  skills-lock.json
.frontmatter/database/: mediaDb.json  taxonomyDb.json
evaluations/: .gitignore  README.md  pyproject.toml  results_202503262016_llama_3_2_zh.csv  results_202503262255_qwen.csv  results_202503271326_llama_3_2_en.csv  results_202503280007.csv  results_202503280008.csv  results_202503281420.csv
evaluations/src/handling_multilang/: README.md  __init__.py  __main__.py  config.py
evaluations/src/handling_multilang/prompts/: 1_no_technique.txt  2_same_lang.txt  3_at_beggining.txt  4_at_end.txt  5_constraint.txt  6_the_example.txt  7_appended_directive.txt
evaluations/src/handling_multilang/utils/: __init__.py  import_prompts.py  languages.py  load_datasets.py  models.py
landing/: .env.example  .gitignore  Dockerfile  docker-compose.yml  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json
landing/content/blog/: 2025-03-22-handling-multiple-languages-in-a-single-prompt.md  2025-04-09-voice-ai-bloat-building-lean-agent.md
landing/content/pages/: about.md  home.md  services.md
landing/public/: _output.css  dotlottie-bundle.js  dropdown.js  offline.html  robots.txt  sw.js  tree.lottie
landing/scripts/: bundle-client.ts  bundle-vendor.js  bundle-vendor.ts  generate-static.ts
landing/src/: index.ts  router.ts  styles.css  typings.ts
landing/src/client/: distortion.js  dropdown.js  gradient-distortion.js  layout.js  navigation.js  phone-drag.js  posthog.js
(+29 files in other folders)
