[project]
name = "evaluations"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.9.6,<4.0"
dependencies = [
    "datasets (>=3.4.1,<4.0.0)",
    "ollama (>=0.4.7,<0.5.0)",
    "openai (>=1.68.2,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]

[tool.poetry]
name = "handling_multilang"
version = "0.1.0"
packages = [{include = "handling_multilang", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"